--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "gulp-mocha": "1.1.1",
     "gulp-nodemon": "1.0.4",
     "jshint-stylish": "1.0.0",
-    "mocha": "1.21.5",
-    "tungus": "0.0.3"
+    "mocha": "1.21.5"
   }
 }
